# cplusplus11.Examples

./: CMakeLists.txt  LICENSE  Makefile  README  README.md  karma.cpp  thought.cc
OpenCV/01.basic_skeleton/: Makefile  example01.cpp
SDL/SDL-1.2_MacOSX.10.10.test/: Makefile  joy-test  joy.hpp  main.cpp
SDL2/3card/: 3card.cpp  3card.hpp  Makefile  README.FIRST
SDL2/acid_cube/: MX_interface.cpp  MX_interface.h  Makefile  README.md  cubemap.cpp
SDL2/sdl2_test/: Makefile  Makefile.sdl  SDL2_test.cpp
UNIX/: Makefile  Makefile.linux  README.md
UNIX/attr/: Makefile  attr-list.cpp
UNIX/directory/: Makefile  dir-find.cpp  dir-test.cpp
UNIX/environment/: Makefile  env.cpp
UNIX/forktest/: Makefile  forktest.cpp
UNIX/getopt/: Makefile  getopt.cpp  getopt2.cpp
UNIX/info/: Makefile  stat.cpp  uname.cpp
UNIX/io/: Makefile  io-read.cpp  io-readwrite.cpp  io-redirect.cpp  poll.cpp  signal-io.cpp
UNIX/ipc/: Makefile  Makefile.linux  fifo-read.cpp  (+24 more)
algorithm/: Makefile  find_if.cpp  for_each.cpp  sort.cpp  transform.cpp
allocator/: Makefile  al.cc
array/: Makefile  ar.cc  ar2.cc
arraybyte/: Makefile  arraybyte.hpp  main.cpp
assert/: Makefile  main.cpp
auto/: Makefile  autotest.cc  autotest2.cpp
bin2cpp_memfile/: Makefile  README.md  bin2cpp.cpp  extract_image.cpp  memfile.hpp  memfile.hpp.cpp  memfile.hpp.h  memfile_demo.cpp
bin_to_array/: Makefile  bin2cpp.cpp  bin2cpp.cpp.cpp  bin2cpp.cpp.h
bitmask/: Makefile  mask.cpp
bitset/: Makefile  bitset_test.cc
calculator/: Makefile  README  lexer.h  main.cpp
cast/: Makefile  casttest.cc
cgi/: Makefile  sourcefile.cpp
chrono/: Makefile  looptest.cc  scoped_t.cc  timetest.cc
compile_test/: Makefile  Makefile.mingw  compile-test  compile-test.cpp
compress_code/: Makefile  compress-code  format.cpp  lexer.hpp  main.cpp  test.html
constexpr/: Makefile  constexpr-test.cc  constexpr.cc  constexpr_example.cpp
databyte/: Makefile  databytes.hpp  main.cpp
db/: Makefile  db.cpp  phone.hpp
download/: Makefile  main.cpp  socket.hpp
enum/: Makefile  enum.cc  enum_class.cpp
finally/: Makefile  finally.cc
find/: Makefile  find.cpp
friend/: Makefile  friend_test.cc
fstream/: Makefile  readwrite.cc  textoutput.cc
function_objects/: Makefile  func1.cpp  func2.cpp
function_syntax/: Makefile  function_syntax.cc  test1.cc
generic/: Makefile  temp1.cc  temp2.cc
hash/: Makefile  hash1.cpp  hash2.cpp  hash3.cpp
hero/: Makefile  hero.hpp  main.cc
idea/: Makefile  love.cpp
init/: Makefile  init_list.cc  init_test.cpp
iterator/: Makefile  it.cpp  it2.cpp  it3.cpp
join/: Makefile  join.hpp  main.cpp
lambda/: Makefile  lambda-test.cpp  lambda.cc  lambda2.cc  lambda_capture.cc  main.cc  source.cc  test.cc
lexer/: Makefile  lexer.hpp  lexer.hpp.html  main.cpp  main.cpp.html  mxl-test.cpp  mxl.hpp  program-test1.cpp  program-test2.cpp  tags.mxl
linesort/: Makefile  code.cpp  code.hpp  func_clear.cpp  func_convert.cpp  func_display.cpp  func_list.cpp  func_open.cpp  func_remove.cpp  func_save.cpp  function.cpp  function.hpp  lexer.cpp  lexer.hpp  linesort.cpp  main.cpp
linkedlist/: Makefile  list.cpp
list_to_array/: Makefile  list_to_array.cpp  test.txt
m3ugen/: Makefile  m3u.hpp  main.cc
main/: Makefile  main.cpp
member/: Makefile  memberdecl.cc
member_fun_pointer/: Makefile  main.cpp
memfile/: Makefile  main.cpp  memfile.hpp  memfile_hpp.hpp
misc/: Makefile  forward.cpp
move/: Makefile  move_test.cc  move_test2.cc  move_test3.cc
mutable/: Makefile  mut.cc
namespace/: Makefile  inline_namespace_ex.cc  namespace2.cpp  namespace3.cpp
operator/: Makefile  default.cc  equal.cpp  operator.cc  plus.cc
operator_new/: Makefile  new.cpp
override/: Makefile  override_test.cc  virtual_base.cc
persist/: Makefile  ioadd.hpp  persist-vector-main.cpp  persist-vector.hpp  persist.cc  persist.hpp  scores.hpp  socket.hpp
pool/: Makefile  driver.cc  memory.hpp
printdir/: Makefile  printdir.cpp
random/: Makefile  r.cc  randtest  shuffle.cc  shuffle2.cc
rar_extract/: Makefile  unrar_extract  unrar_extract.cpp
readfast_textscroll/: Makefile  blog.txt  linescroll  linescroll.cpp  plaintext_scroll  scroll.cpp  test.txt  textscroll  textscroll.cpp
regex/: Makefile  regex.cpp  regex_test.cc
rename_files/: Makefile  file_rename.cc
replace/: Makefile  main.cpp  replace.hpp
rotate/: Makefile  ror-test  ror_rol.cpp
rvalue/: Makefile  rvalue1.cpp  rvalue2.cpp  rvalue3.cpp  rvalue4.cpp  rvalue5.cpp
sdl2_test/: Makefile  SDL2_test.cpp  SDL2_test2.cpp  pong.cpp
set/: Makefile  set-test  set.cpp
shared/: Makefile  sharedtest.cpp  sharedtest2.cpp
smart_pointer/: Makefile  smart.cpp  unique.cc
sort/: Makefile  sort1.cpp  sort2.cpp
sort_files/: Makefile  main.cpp  sfile.hpp
static/: Makefile  static1.cpp  static2.cpp  static_main.h
stopwatch/: Makefile  looptest.cpp  main.cpp  movetest.cpp  readtest.cpp  stopwatch-test  stopwatch.hpp  string-test.cpp
stream_insert_iterators/: Makefile  insert_iterator.cpp  stream_iterator.cpp
stringstream/: Makefile  iss.cc  iss2.cc  ss.cc
symbol_table/: Makefile  symbol_table.cc
templates/: Makefile  template-class.cpp  template-class2.cpp  template-class3.cpp  template-function.cpp  template-inst.cpp  template-pointer.cpp  template-spec.cpp  template-template.cpp  template-type.cpp  template-union.cpp
test/: Makefile  static_assert_test.cc  temp_test.cc  temp_test2.cc  test.cc  test2.cc  typearr.cc
thread/: Makefile  async_test.cc  async_test2.cc  async_test3.cc  async_test4.cpp  atomic.cpp  detach.cpp  promise.cc  thread_test.cc
tilemap/: Makefile  Tilemap.h  main.cpp  test
tokenize/: Makefile  collect_tokens.cpp  lexer.hpp  parse.cpp  tokenize.cpp
transfer/: Makefile  socket.hpp  transfer.cc
trim_lines/: Makefile  triml  triml.cpp  triml.cpp.txt
try/: Makefile  try.cc  try2.cc
tuple/: Makefile  t.cc
typeid/: Makefile  typeid_test.cc  typeid_test2.cpp
unordered_map/: Makefile  print_recursive.cc  unordered_map_test.cc
variadic/: Makefile  v.cc  v2.cc
vector/: Makefile  em.cc  persist_vector.cc
(+143 files in other folders)
